--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Document</title>
+    <title>Harmsing</title>
 </head>
 <body>
-Hello, world!
+Привет, Мир!
 </body>
 </html>
