--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>Harmsing</title>
 </head>
 <body>
-Привет, Мир!
+<div class="container mt-3">
+    <form>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label" for="exampleInputEmail1">Строковый тип</label>
+            <input class="col-sm-2 form-control" type="email" id="exampleInputEmail1" aria-describedby="emailHelp">
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label" for="exampleFormControlSelect1">Перечисляемый тип</label>
+            <select class="col-sm-2 custom-select" id="exampleFormControlSelect1">
+                <option selected value="1997">1997</option>
+                <option value="1998">1998</option>
+                <option value="1999">1999</option>
+                <option value="2000">2000</option>
+            </select>
+        </div>
+    </form>
+</div>
 </body>
 </html>
