--- a/index.html
+++ b/index.html
@@ -14,13 +14,37 @@
             <input class="col-sm-2 form-control" type="email" id="exampleInputEmail1" aria-describedby="emailHelp">
         </div>
         <div class="form-group row">
-            <label class="col-sm-2 col-form-label" for="exampleFormControlSelect1">Перечисляемый тип</label>
+            <label class="col-sm-2 col-form-label" for="exampleFormControlSelect1">Перечисляемый тип (выпадающий список)</label>
             <select class="col-sm-2 custom-select" id="exampleFormControlSelect1">
                 <option selected value="1997">1997</option>
                 <option value="1998">1998</option>
                 <option value="1999">1999</option>
-                <option value="2000">2000</option>
             </select>
+        </div>
+        <div class="form-group">
+            <div class="row">
+                <label class="col-form-label col-sm-2 pt-0">Пречисляемый тип (радиокнопки)</label>
+                <div class="col-sm-10">
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                        <label class="form-check-label" for="gridRadios1">
+                            1997
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                        <label class="form-check-label" for="gridRadios2">
+                            1998
+                        </label>
+                    </div>
+                    <div class="form-check disabled">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
+                        <label class="form-check-label" for="gridRadios3">
+                            1999
+                        </label>
+                    </div>
+                </div>
+            </div>
         </div>
     </form>
 </div>
