--- a/index.html
+++ b/index.html
@@ -5,48 +5,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>Harmsing</title>
+    <style>
+        .images > a > img {
+            object-fit: scale-down;
+            width:120px;
+            height:120px;
+        }
+
+        @media (min-width: 768px) {
+            .images > a > img {
+                object-fit: scale-down;
+                width:360px;
+                height:360px;
+            }
+        }
+    </style>
 </head>
 <body>
-<div class="container mt-3">
-    <form>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label" for="exampleInputEmail1">Строковый тип</label>
-            <input class="col-sm-2 form-control" type="email" id="exampleInputEmail1" aria-describedby="emailHelp">
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label" for="exampleFormControlSelect1">Перечисляемый тип (выпадающий список)</label>
-            <select class="col-sm-2 custom-select" id="exampleFormControlSelect1">
-                <option selected value="1997">1997</option>
-                <option value="1998">1998</option>
-                <option value="1999">1999</option>
+<div class="container-fluid mt-3">
+    <h2>Картриджи</h2>
+
+    <form class="form-inline">
+        <div class="form-group mx-md-0">
+            <label for="group_by">Группировка</label>
+            <select class="custom-select mx-sm-3" id="group_by">
+                <option value="year">Год</option>
+                <option value="n-games">Количество игр</option>
+                <option value="case-type">Тип корпуса</option>
+                <option value="game">Игра</option>
             </select>
         </div>
-        <div class="form-group">
-            <div class="row">
-                <label class="col-form-label col-sm-2 pt-0">Пречисляемый тип (радиокнопки)</label>
-                <div class="col-sm-10">
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
-                        <label class="form-check-label" for="gridRadios1">
-                            1997
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
-                        <label class="form-check-label" for="gridRadios2">
-                            1998
-                        </label>
-                    </div>
-                    <div class="form-check disabled">
-                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
-                        <label class="form-check-label" for="gridRadios3">
-                            1999
-                        </label>
-                    </div>
-                </div>
-            </div>
-        </div>
     </form>
+
+    <div id="data">
+        <div class="item">
+            <div class="year">1997</div>
+            <div class="serial">JY-066</div>
+            <div class="n-games">4</div>
+            <div class="case-type">Малый</div>
+
+            <div class="game">Power Rangers</div>
+            <div class="game">Power Rangers 2</div>
+            <div class="game">Bird Fighter</div>
+            <div class="game">Magmax</div>
+        </div>
+
+        <div class="item">
+            <div class="year">1995</div>
+            <div class="serial">JP-004</div>
+            <div class="n-games">2</div>
+            <div class="case-type">TV Game</div>
+
+            <div class="game">Boat Duel</div>
+            <div class="game">The Untouchables</div>
+        </div>
+
+        <div class="item">
+            <div class="year">1996</div>
+            <div class="serial">DY115</div>
+            <div class="n-games">5</div>
+            <div class="case-type">TV Game</div>
+
+            <div class="game">Digger</div>
+            <div class="game">Dragon Balz</div>
+            <div class="game">Battle toads and Double Dragon</div>
+            <div class="game">Yu Yu book</div>
+            <div class="game">Journey to the West</div>
+        </div>
+    </div>
+
+    <div id="gallery">
+        <h3 class="mt-4">1995</h3>
+        <div class="images" style="margin-left: -15px; margin-right: -15px;">
+            <a href="images/JP-004.jpg" target="_blank"><img src="images/JP-004_.jpg" alt="JP-004"></a><a href="images/DY115.jpg" target="_blank"><img src="images/DY115_.jpg" alt="DY115"></a><a href="images/JY-066.jpg" target="_blank"><img src="images/JY-066_.jpg" alt="JY-066"></a><a href="images/JP-004.jpg" target="_blank"><img src="images/JP-004_.jpg" alt="JP-004"></a><a href="images/DY115.jpg" target="_blank"><img src="images/DY115_.jpg" alt="DY115"></a><a href="images/JY-066.jpg" target="_blank"><img src="images/JY-066_.jpg" alt="JY-066"></a><a href="images/JP-004.jpg" target="_blank"><img src="images/JP-004_.jpg" alt="JP-004"></a>
+        </div>
+    </div>
+
 </div>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="main.js"></script>
 </body>
 </html>
