test image size

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <style>
         .images > a > img {
             object-fit: scale-down;
-            width:120px;
-            height:120px;
+            width: 33.33333vw;
+            height: 33.33333vw;
         }
 
         @media (min-width: 768px) {
