--- a/index.html
+++ b/index.html
@@ -39,47 +39,48 @@
 
     <div id="data">
         <div class="item">
-            <div class="year">1997</div>
-            <div class="serial">JY-066</div>
-            <div class="n-games">4</div>
-            <div class="case-type">Малый</div>
+            <div data-tag="year">1997</div>
+            <div data-tag="serial">JY-066</div>
+            <div data-tag="n-games">4</div>
+            <div data-tag="case-type">Малый</div>
 
-            <div class="game">Power Rangers</div>
-            <div class="game">Power Rangers 2</div>
-            <div class="game">Bird Fighter</div>
-            <div class="game">Magmax</div>
+            <div data-tag="game">Power Rangers</div>
+            <div data-tag="game">Power Rangers 2</div>
+            <div data-tag="game">Bird Fighter</div>
+            <div data-tag="game">Magmax</div>
+
+            <div data-tag="image">JY-066</div>
         </div>
 
         <div class="item">
-            <div class="year">1995</div>
-            <div class="serial">JP-004</div>
-            <div class="n-games">2</div>
-            <div class="case-type">TV Game</div>
+            <div data-tag="year">1995</div>
+            <div data-tag="serial">JP-004</div>
+            <div data-tag="n-games">2</div>
+            <div data-tag="case-type">TV Game</div>
 
-            <div class="game">Boat Duel</div>
-            <div class="game">The Untouchables</div>
+            <div data-tag="game">Boat Duel</div>
+            <div data-tag="game">The Untouchables</div>
+
+            <div data-tag="image">JP-004</div>
         </div>
 
         <div class="item">
-            <div class="year">1996</div>
-            <div class="serial">DY115</div>
-            <div class="n-games">5</div>
-            <div class="case-type">TV Game</div>
+            <div data-tag="year">1996</div>
+            <div data-tag="serial">DY115</div>
+            <div data-tag="n-games">5</div>
+            <div data-tag="case-type">TV Game</div>
 
-            <div class="game">Digger</div>
-            <div class="game">Dragon Balz</div>
-            <div class="game">Battle toads and Double Dragon</div>
-            <div class="game">Yu Yu book</div>
-            <div class="game">Journey to the West</div>
+            <div data-tag="game">Digger</div>
+            <div data-tag="game">Dragon Balz</div>
+            <div data-tag="game">Battle toads and Double Dragon</div>
+            <div data-tag="game">Yu Yu book</div>
+            <div data-tag="game">Journey to the West</div>
+
+            <div data-tag="image">DY115</div>
         </div>
     </div>
 
-    <div id="gallery">
-        <h3 class="mt-4">1995</h3>
-        <div class="images" style="margin-left: -15px; margin-right: -15px;">
-            <a href="images/JP-004.jpg" target="_blank"><img src="images/JP-004_.jpg" alt="JP-004"></a><a href="images/DY115.jpg" target="_blank"><img src="images/DY115_.jpg" alt="DY115"></a><a href="images/JY-066.jpg" target="_blank"><img src="images/JY-066_.jpg" alt="JY-066"></a><a href="images/JP-004.jpg" target="_blank"><img src="images/JP-004_.jpg" alt="JP-004"></a><a href="images/DY115.jpg" target="_blank"><img src="images/DY115_.jpg" alt="DY115"></a><a href="images/JY-066.jpg" target="_blank"><img src="images/JY-066_.jpg" alt="JY-066"></a><a href="images/JP-004.jpg" target="_blank"><img src="images/JP-004_.jpg" alt="JP-004"></a>
-        </div>
-    </div>
+    <div id="gallery"></div>
 
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
