--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <option value="year">Год</option>
                 <option value="n-games">Количество игр</option>
                 <option value="case-type">Тип корпуса</option>
+                <option value="series">Серия</option>
                 <option value="game">Игра</option>
             </select>
         </div>
@@ -43,9 +44,10 @@
     <div id="data">
         <div class="item">
             <div data-tag="year">1997</div>
-            <div data-tag="serial">JY-066</div>
+            <div data-tag="series">JY</div>
+            <div data-tag="number">066</div>
             <div data-tag="n-games">4</div>
-            <div data-tag="case-type">Малый</div>
+            <div data-tag="case-type">Кирпич</div>
 
             <div data-tag="game">Power Rangers</div>
             <div data-tag="game">Power Rangers 2</div>
@@ -57,7 +59,8 @@
 
         <div class="item">
             <div data-tag="year">1995</div>
-            <div data-tag="serial">JP-004</div>
+            <div data-tag="series">JP</div>
+            <div data-tag="number">004</div>
             <div data-tag="n-games">2</div>
             <div data-tag="case-type">TV Game</div>
 
@@ -69,7 +72,8 @@
 
         <div class="item">
             <div data-tag="year">1996</div>
-            <div data-tag="serial">DY115</div>
+            <div data-tag="series">DY</div>
+            <div data-tag="number">115</div>
             <div data-tag="n-games">5</div>
             <div data-tag="case-type">TV Game</div>
 
