--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
 
     <div id="data">
         <div class="item">
+            <div data-tag="year">1994</div>
+            <div data-tag="series">Subor</div>
+            <div data-tag="number">0211</div>
+            <div data-tag="n-games">2</div>
+            <div data-tag="case-type">TV Game</div>
+
+            <div data-tag="game">Mighty Final Fight</div>
+            <div data-tag="game">Spartan X2</div>
+            <div data-tag="game">Spartan X2</div>
+            
+            <div data-tag="image">Subor-0211</div>
+        </div>
+        
+        <div class="item">
             <div data-tag="year">1997</div>
             <div data-tag="series">JY</div>
             <div data-tag="number">066</div>
