--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
         </div>
 
         <div class="item">
+            <div data-tag="year">&lt;1996</div>
+            <div data-tag="series">H-K</div>
+            <div data-tag="number">5</div>
+            <div data-tag="n-games">1</div>
+            <div data-tag="case-type">TV Game</div>
+
+            <div data-tag="game">Hook</div>
+            
+            <div data-tag="image">Hook</div>
+        </div>
+
+        <div class="item">
             <div data-tag="year">1996</div>
             <div data-tag="series">DY</div>
             <div data-tag="number">115</div>
