--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="container-fluid mt-3">
     <h2>Картриджи</h2>
 
-    <form class="form-inline">
+    <form class="form-inline mb-3">
         <div class="form-group mx-md-0">
             <label for="group_by">Группировка</label>
             <select class="custom-select mx-sm-3" id="group_by">
@@ -38,6 +38,16 @@
                 <option value="series">Серия</option>
                 <option value="game">Игра</option>
             </select>
+        </div>
+        <div class="form-group mx-md-0">
+            <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="view_gallery" name="view" class="custom-control-input" checked value="gallery">
+                <label class="custom-control-label" for="view_gallery">Gallery</label>
+            </div>
+            <div class="custom-control custom-radio custom-control-inline">
+                <input type="radio" id="view_table" name="view" class="custom-control-input" value="table">
+                <label class="custom-control-label" for="view_table">Table</label>
+            </div>
         </div>
     </form>
 
@@ -113,10 +123,25 @@
     </div>
 
     <div id="gallery"></div>
+    <div id="table" class="table-responsive" style="display: none">
+        <table class="table table-sm" style="white-space: nowrap">
+            <thead>
+            <tr>
+                <th>Series</th>
+                <th>Number</th>
+                <th>Year</th>
+                <th>Case type</th>
+                <th>Number<br>of games</th>
+                <th>Games</th>
+            </tr>
+            </thead>
+            <tbody id="table_view_body"></tbody>
+        </table>
+    </div>
 
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
-<script src="main.js?v=4"></script>
+<script src="main.js?v=5"></script>
 </body>
 </html>
